# wiki-parser-py

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  bench.py  dprint.json  meson.build  meson.options  pyproject.toml  setup.py  wiki_test.py
.github/: renovate.json
.github/workflows/: _build_wheels.yaml  autofix.yaml  ci.yaml  lint.yaml  release.yaml  test.yaml  tests.yaml
bgm_tv_wiki/: __init__.py
build_backend/: buildapi.py  wiki_build.py
src/: lib.rs
src/bgm_tv_wiki/: __.py  __init__.py  __init__.pyi
